# apps/backend/src/modules/auth/dto/login.dto.ts
@@ -1,0 +1,11 @@
+import { Transform } from 'class-transformer';
+import { IsEmail, IsString } from 'class-validator';
+
+export class LoginDto {
+  @IsEmail()
+  @Transform(({ value }: { value: string }) => value?.trim().toLowerCase())
+  email: string;
+
+  @IsString()
+  password: string;
+}
